// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract-units should be able to extract en 1`] = `
Object {
  "en": Object {
    "compound": Object {
      "per": Object {
        "long": "{0} per {1}",
        "narrow": "{0}/{1}",
        "short": "{0}/{1}",
      },
    },
    "simple": Object {
      "acre": Object {
        "long": Object {
          "one": "{0} acre",
          "other": "{0} acres",
        },
        "narrow": Object {
          "other": "{0}ac",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} ac",
        },
      },
      "bit": Object {
        "long": Object {
          "one": "{0} bit",
          "other": "{0} bits",
        },
        "narrow": Object {
          "other": "{0}bit",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} bit",
        },
      },
      "byte": Object {
        "long": Object {
          "one": "{0} byte",
          "other": "{0} bytes",
        },
        "narrow": Object {
          "other": "{0}B",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} byte",
        },
      },
      "celsius": Object {
        "long": Object {
          "one": "{0} degree Celsius",
          "other": "{0} degrees Celsius",
        },
        "narrow": Object {
          "other": "{0}°C",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0}°C",
        },
      },
      "centimeter": Object {
        "long": Object {
          "one": "{0} centimeter",
          "other": "{0} centimeters",
        },
        "narrow": Object {
          "other": "{0}cm",
        },
        "perUnit": Object {
          "long": "{0} per centimeter",
          "narrow": "{0}/cm",
          "short": "{0}/cm",
        },
        "short": Object {
          "other": "{0} cm",
        },
      },
      "day": Object {
        "long": Object {
          "one": "{0} day",
          "other": "{0} days",
        },
        "narrow": Object {
          "other": "{0}d",
        },
        "perUnit": Object {
          "long": "{0} per day",
          "narrow": "{0}/d",
          "short": "{0}/d",
        },
        "short": Object {
          "one": "{0} day",
          "other": "{0} days",
        },
      },
      "degree": Object {
        "long": Object {
          "one": "{0} degree",
          "other": "{0} degrees",
        },
        "narrow": Object {
          "other": "{0}°",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} deg",
        },
      },
      "fahrenheit": Object {
        "long": Object {
          "one": "{0} degree Fahrenheit",
          "other": "{0} degrees Fahrenheit",
        },
        "narrow": Object {
          "other": "{0}°",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0}°F",
        },
      },
      "fluid-ounce": Object {
        "long": Object {
          "one": "{0} fluid ounce",
          "other": "{0} fluid ounces",
        },
        "narrow": Object {
          "other": "{0}fl oz",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} fl oz",
        },
      },
      "foot": Object {
        "long": Object {
          "one": "{0} foot",
          "other": "{0} feet",
        },
        "narrow": Object {
          "other": "{0}′",
        },
        "perUnit": Object {
          "long": "{0} per foot",
          "narrow": "{0}/ft",
          "short": "{0}/ft",
        },
        "short": Object {
          "other": "{0} ft",
        },
      },
      "gallon": Object {
        "long": Object {
          "one": "{0} gallon",
          "other": "{0} gallons",
        },
        "narrow": Object {
          "other": "{0}gal",
        },
        "perUnit": Object {
          "long": "{0} per gallon",
          "narrow": "{0}/gal",
          "short": "{0}/gal US",
        },
        "short": Object {
          "other": "{0} gal",
        },
      },
      "gigabit": Object {
        "long": Object {
          "one": "{0} gigabit",
          "other": "{0} gigabits",
        },
        "narrow": Object {
          "other": "{0}Gb",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} Gb",
        },
      },
      "gigabyte": Object {
        "long": Object {
          "one": "{0} gigabyte",
          "other": "{0} gigabytes",
        },
        "narrow": Object {
          "other": "{0}GB",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} GB",
        },
      },
      "gram": Object {
        "long": Object {
          "one": "{0} gram",
          "other": "{0} grams",
        },
        "narrow": Object {
          "other": "{0}g",
        },
        "perUnit": Object {
          "long": "{0} per gram",
          "narrow": "{0}/g",
          "short": "{0}/g",
        },
        "short": Object {
          "other": "{0} g",
        },
      },
      "hectare": Object {
        "long": Object {
          "one": "{0} hectare",
          "other": "{0} hectares",
        },
        "narrow": Object {
          "other": "{0}ha",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} ha",
        },
      },
      "hour": Object {
        "long": Object {
          "one": "{0} hour",
          "other": "{0} hours",
        },
        "narrow": Object {
          "other": "{0}h",
        },
        "perUnit": Object {
          "long": "{0} per hour",
          "narrow": "{0}/h",
          "short": "{0}/h",
        },
        "short": Object {
          "other": "{0} hr",
        },
      },
      "inch": Object {
        "long": Object {
          "one": "{0} inch",
          "other": "{0} inches",
        },
        "narrow": Object {
          "other": "{0}″",
        },
        "perUnit": Object {
          "long": "{0} per inch",
          "narrow": "{0}/in",
          "short": "{0}/in",
        },
        "short": Object {
          "other": "{0} in",
        },
      },
      "kilobit": Object {
        "long": Object {
          "one": "{0} kilobit",
          "other": "{0} kilobits",
        },
        "narrow": Object {
          "other": "{0}kb",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} kb",
        },
      },
      "kilobyte": Object {
        "long": Object {
          "one": "{0} kilobyte",
          "other": "{0} kilobytes",
        },
        "narrow": Object {
          "other": "{0}kB",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} kB",
        },
      },
      "kilogram": Object {
        "long": Object {
          "one": "{0} kilogram",
          "other": "{0} kilograms",
        },
        "narrow": Object {
          "other": "{0}kg",
        },
        "perUnit": Object {
          "long": "{0} per kilogram",
          "narrow": "{0}/kg",
          "short": "{0}/kg",
        },
        "short": Object {
          "other": "{0} kg",
        },
      },
      "kilometer": Object {
        "long": Object {
          "one": "{0} kilometer",
          "other": "{0} kilometers",
        },
        "narrow": Object {
          "other": "{0}km",
        },
        "perUnit": Object {
          "long": "{0} per kilometer",
          "narrow": "{0}/km",
          "short": "{0}/km",
        },
        "short": Object {
          "other": "{0} km",
        },
      },
      "kilometer-per-hour": Object {
        "long": Object {
          "one": "{0} kilometer per hour",
          "other": "{0} kilometers per hour",
        },
        "narrow": Object {
          "other": "{0}km/h",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} km/h",
        },
      },
      "liter": Object {
        "long": Object {
          "one": "{0} liter",
          "other": "{0} liters",
        },
        "narrow": Object {
          "other": "{0}L",
        },
        "perUnit": Object {
          "long": "{0} per liter",
          "narrow": "{0}/L",
          "short": "{0}/L",
        },
        "short": Object {
          "other": "{0} L",
        },
      },
      "liter-per-kilometer": Object {
        "long": Object {
          "one": "{0} liter per kilometer",
          "other": "{0} liters per kilometer",
        },
        "narrow": Object {
          "other": "{0}L/km",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} L/km",
        },
      },
      "megabit": Object {
        "long": Object {
          "one": "{0} megabit",
          "other": "{0} megabits",
        },
        "narrow": Object {
          "other": "{0}Mb",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} Mb",
        },
      },
      "megabyte": Object {
        "long": Object {
          "one": "{0} megabyte",
          "other": "{0} megabytes",
        },
        "narrow": Object {
          "other": "{0}MB",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} MB",
        },
      },
      "meter": Object {
        "long": Object {
          "one": "{0} meter",
          "other": "{0} meters",
        },
        "narrow": Object {
          "other": "{0}m",
        },
        "perUnit": Object {
          "long": "{0} per meter",
          "narrow": "{0}/m",
          "short": "{0}/m",
        },
        "short": Object {
          "other": "{0} m",
        },
      },
      "meter-per-second": Object {
        "long": Object {
          "one": "{0} meter per second",
          "other": "{0} meters per second",
        },
        "narrow": Object {
          "other": "{0}m/s",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} m/s",
        },
      },
      "mile": Object {
        "long": Object {
          "one": "{0} mile",
          "other": "{0} miles",
        },
        "narrow": Object {
          "other": "{0}mi",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} mi",
        },
      },
      "mile-per-gallon": Object {
        "long": Object {
          "one": "{0} mile per gallon",
          "other": "{0} miles per gallon",
        },
        "narrow": Object {
          "other": "{0}mpg",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} mpg",
        },
      },
      "mile-per-hour": Object {
        "long": Object {
          "one": "{0} mile per hour",
          "other": "{0} miles per hour",
        },
        "narrow": Object {
          "other": "{0}mph",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} mph",
        },
      },
      "mile-scandinavian": Object {
        "long": Object {
          "one": "{0} mile-scandinavian",
          "other": "{0} miles-scandinavian",
        },
        "narrow": Object {
          "other": "{0}smi",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} smi",
        },
      },
      "milliliter": Object {
        "long": Object {
          "one": "{0} milliliter",
          "other": "{0} milliliters",
        },
        "narrow": Object {
          "other": "{0}mL",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} mL",
        },
      },
      "millimeter": Object {
        "long": Object {
          "one": "{0} millimeter",
          "other": "{0} millimeters",
        },
        "narrow": Object {
          "other": "{0}mm",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} mm",
        },
      },
      "millisecond": Object {
        "long": Object {
          "one": "{0} millisecond",
          "other": "{0} milliseconds",
        },
        "narrow": Object {
          "other": "{0}ms",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} ms",
        },
      },
      "minute": Object {
        "long": Object {
          "one": "{0} minute",
          "other": "{0} minutes",
        },
        "narrow": Object {
          "other": "{0}m",
        },
        "perUnit": Object {
          "long": "{0} per minute",
          "narrow": "{0}/min",
          "short": "{0}/min",
        },
        "short": Object {
          "other": "{0} min",
        },
      },
      "month": Object {
        "long": Object {
          "one": "{0} month",
          "other": "{0} months",
        },
        "narrow": Object {
          "other": "{0}m",
        },
        "perUnit": Object {
          "long": "{0} per month",
          "narrow": "{0}/m",
          "short": "{0}/m",
        },
        "short": Object {
          "one": "{0} mth",
          "other": "{0} mths",
        },
      },
      "ounce": Object {
        "long": Object {
          "one": "{0} ounce",
          "other": "{0} ounces",
        },
        "narrow": Object {
          "other": "{0}oz",
        },
        "perUnit": Object {
          "long": "{0} per ounce",
          "narrow": "{0}/oz",
          "short": "{0}/oz",
        },
        "short": Object {
          "other": "{0} oz",
        },
      },
      "percent": Object {
        "long": Object {
          "other": "{0} percent",
        },
        "narrow": Object {
          "other": "{0}%",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0}%",
        },
      },
      "petabyte": Object {
        "long": Object {
          "one": "{0} petabyte",
          "other": "{0} petabytes",
        },
        "narrow": Object {
          "other": "{0}PB",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} PB",
        },
      },
      "pound": Object {
        "long": Object {
          "one": "{0} pound",
          "other": "{0} pounds",
        },
        "narrow": Object {
          "other": "{0}#",
        },
        "perUnit": Object {
          "long": "{0} per pound",
          "narrow": "{0}/lb",
          "short": "{0}/lb",
        },
        "short": Object {
          "other": "{0} lb",
        },
      },
      "second": Object {
        "long": Object {
          "one": "{0} second",
          "other": "{0} seconds",
        },
        "narrow": Object {
          "other": "{0}s",
        },
        "perUnit": Object {
          "long": "{0} per second",
          "narrow": "{0}/s",
          "short": "{0}/s",
        },
        "short": Object {
          "other": "{0} sec",
        },
      },
      "stone": Object {
        "long": Object {
          "one": "{0} stone",
          "other": "{0} stones",
        },
        "narrow": Object {
          "other": "{0}st",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} st",
        },
      },
      "terabit": Object {
        "long": Object {
          "one": "{0} terabit",
          "other": "{0} terabits",
        },
        "narrow": Object {
          "other": "{0}Tb",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} Tb",
        },
      },
      "terabyte": Object {
        "long": Object {
          "one": "{0} terabyte",
          "other": "{0} terabytes",
        },
        "narrow": Object {
          "other": "{0}TB",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} TB",
        },
      },
      "week": Object {
        "long": Object {
          "one": "{0} week",
          "other": "{0} weeks",
        },
        "narrow": Object {
          "other": "{0}w",
        },
        "perUnit": Object {
          "long": "{0} per week",
          "narrow": "{0}/w",
          "short": "{0}/w",
        },
        "short": Object {
          "one": "{0} wk",
          "other": "{0} wks",
        },
      },
      "yard": Object {
        "long": Object {
          "one": "{0} yard",
          "other": "{0} yards",
        },
        "narrow": Object {
          "other": "{0}yd",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} yd",
        },
      },
      "year": Object {
        "long": Object {
          "one": "{0} year",
          "other": "{0} years",
        },
        "narrow": Object {
          "other": "{0}y",
        },
        "perUnit": Object {
          "long": "{0} per year",
          "narrow": "{0}/y",
          "short": "{0}/y",
        },
        "short": Object {
          "one": "{0} yr",
          "other": "{0} yrs",
        },
      },
    },
  },
}
`;

exports[`extract-units should be able to extract ja 1`] = `
Object {
  "ja": Object {
    "compound": Object {
      "per": Object {
        "long": "{0}毎{1}",
        "narrow": "{0}/{1}",
        "short": "{0}/{1}",
      },
    },
    "simple": Object {
      "acre": Object {
        "long": Object {
          "other": "{0} エーカー",
        },
        "narrow": Object {
          "other": "{0}ac",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} ac",
        },
      },
      "bit": Object {
        "long": Object {
          "other": "{0} ビット",
        },
        "narrow": Object {
          "other": "{0}b",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} bit",
        },
      },
      "byte": Object {
        "long": Object {
          "other": "{0} バイト",
        },
        "narrow": Object {
          "other": "{0}B",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} byte",
        },
      },
      "celsius": Object {
        "long": Object {
          "other": "摂氏 {0} 度",
        },
        "narrow": Object {
          "other": "{0}°C",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0}°C",
        },
      },
      "centimeter": Object {
        "long": Object {
          "other": "{0} センチメートル",
        },
        "narrow": Object {
          "other": "{0}cm",
        },
        "perUnit": Object {
          "long": "{0}/センチメートル",
          "narrow": "{0}/cm",
          "short": "{0}/cm",
        },
        "short": Object {
          "other": "{0} cm",
        },
      },
      "day": Object {
        "long": Object {
          "other": "{0} 日",
        },
        "narrow": Object {
          "other": "{0}d",
        },
        "perUnit": Object {
          "long": "{0}/日",
          "narrow": "{0}/日",
          "short": "{0}/日",
        },
        "short": Object {
          "other": "{0} 日",
        },
      },
      "degree": Object {
        "long": Object {
          "other": "{0} 度",
        },
        "narrow": Object {
          "other": "{0} 度",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} 度",
        },
      },
      "fahrenheit": Object {
        "long": Object {
          "other": "華氏 {0} 度",
        },
        "narrow": Object {
          "other": "{0}°F",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0}°F",
        },
      },
      "fluid-ounce": Object {
        "long": Object {
          "other": "{0} 液量オンス",
        },
        "narrow": Object {
          "other": "{0}fl oz",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} fl oz",
        },
      },
      "foot": Object {
        "long": Object {
          "other": "{0} フィート",
        },
        "narrow": Object {
          "other": "{0}′",
        },
        "perUnit": Object {
          "long": "{0}/フィート",
          "narrow": "{0}/ft",
          "short": "{0}/ft",
        },
        "short": Object {
          "other": "{0} ft",
        },
      },
      "gallon": Object {
        "long": Object {
          "other": "{0} ガロン",
        },
        "narrow": Object {
          "other": "{0}gal",
        },
        "perUnit": Object {
          "long": "{0}/ガロン",
          "narrow": "{0}/gal",
          "short": "{0}/gal",
        },
        "short": Object {
          "other": "{0} gal",
        },
      },
      "gigabit": Object {
        "long": Object {
          "other": "{0} ギガビット",
        },
        "narrow": Object {
          "other": "{0}Gb",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} Gb",
        },
      },
      "gigabyte": Object {
        "long": Object {
          "other": "{0} ギガバイト",
        },
        "narrow": Object {
          "other": "{0}GB",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} GB",
        },
      },
      "gram": Object {
        "long": Object {
          "other": "{0} グラム",
        },
        "narrow": Object {
          "other": "{0}g",
        },
        "perUnit": Object {
          "long": "{0}/グラム",
          "narrow": "{0}/g",
          "short": "{0}/g",
        },
        "short": Object {
          "other": "{0} g",
        },
      },
      "hectare": Object {
        "long": Object {
          "other": "{0} ヘクタール",
        },
        "narrow": Object {
          "other": "{0}ha",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} ha",
        },
      },
      "hour": Object {
        "long": Object {
          "other": "{0} 時間",
        },
        "narrow": Object {
          "other": "{0}h",
        },
        "perUnit": Object {
          "long": "{0}/時間",
          "narrow": "{0}/時間",
          "short": "{0}/時間",
        },
        "short": Object {
          "other": "{0} 時間",
        },
      },
      "inch": Object {
        "long": Object {
          "other": "{0} インチ",
        },
        "narrow": Object {
          "other": "{0}″",
        },
        "perUnit": Object {
          "long": "{0}/インチ",
          "narrow": "{0}/in",
          "short": "{0}/in",
        },
        "short": Object {
          "other": "{0} in",
        },
      },
      "kilobit": Object {
        "long": Object {
          "other": "{0} キロビット",
        },
        "narrow": Object {
          "other": "{0}kb",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} kb",
        },
      },
      "kilobyte": Object {
        "long": Object {
          "other": "{0} キロバイト",
        },
        "narrow": Object {
          "other": "{0}kB",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} KB",
        },
      },
      "kilogram": Object {
        "long": Object {
          "other": "{0} キログラム",
        },
        "narrow": Object {
          "other": "{0}kg",
        },
        "perUnit": Object {
          "long": "{0}/キログラム",
          "narrow": "{0}/kg",
          "short": "{0}/kg",
        },
        "short": Object {
          "other": "{0} kg",
        },
      },
      "kilometer": Object {
        "long": Object {
          "other": "{0} キロメートル",
        },
        "narrow": Object {
          "other": "{0}km",
        },
        "perUnit": Object {
          "long": "{0}/キロメートル",
          "narrow": "{0}/km",
          "short": "{0}/km",
        },
        "short": Object {
          "other": "{0} km",
        },
      },
      "kilometer-per-hour": Object {
        "long": Object {
          "other": "時速 {0} キロメートル",
        },
        "narrow": Object {
          "other": "{0}km/h",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} km/h",
        },
      },
      "liter": Object {
        "long": Object {
          "other": "{0} リットル",
        },
        "narrow": Object {
          "other": "{0}L",
        },
        "perUnit": Object {
          "long": "{0}/リットル",
          "narrow": "{0}/L",
          "short": "{0}/L",
        },
        "short": Object {
          "other": "{0} L",
        },
      },
      "liter-per-kilometer": Object {
        "long": Object {
          "other": "{0} リットル毎キロメートル",
        },
        "narrow": Object {
          "other": "{0}L/km",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} L/km",
        },
      },
      "megabit": Object {
        "long": Object {
          "other": "{0} メガビット",
        },
        "narrow": Object {
          "other": "{0}Mb",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} Mb",
        },
      },
      "megabyte": Object {
        "long": Object {
          "other": "{0} メガバイト",
        },
        "narrow": Object {
          "other": "{0}MB",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} MB",
        },
      },
      "meter": Object {
        "long": Object {
          "other": "{0} メートル",
        },
        "narrow": Object {
          "other": "{0}m",
        },
        "perUnit": Object {
          "long": "{0}/メートル",
          "narrow": "{0}/m",
          "short": "{0}/m",
        },
        "short": Object {
          "other": "{0} m",
        },
      },
      "meter-per-second": Object {
        "long": Object {
          "other": "秒速 {0} メートル",
        },
        "narrow": Object {
          "other": "{0}m/s",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} m/s",
        },
      },
      "mile": Object {
        "long": Object {
          "other": "{0} マイル",
        },
        "narrow": Object {
          "other": "{0}マイル",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} mi",
        },
      },
      "mile-per-gallon": Object {
        "long": Object {
          "other": "{0} マイル毎ガロン",
        },
        "narrow": Object {
          "other": "{0}mpg",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} mpg",
        },
      },
      "mile-per-hour": Object {
        "long": Object {
          "other": "時速 {0} マイル",
        },
        "narrow": Object {
          "other": "{0}mi/h",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} mph",
        },
      },
      "mile-scandinavian": Object {
        "long": Object {
          "other": "{0} スカンジナビアマイル",
        },
        "narrow": Object {
          "other": "{0} smi",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} smi",
        },
      },
      "milliliter": Object {
        "long": Object {
          "other": "{0} ミリリットル",
        },
        "narrow": Object {
          "other": "{0}ml",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} ml",
        },
      },
      "millimeter": Object {
        "long": Object {
          "other": "{0} ミリメートル",
        },
        "narrow": Object {
          "other": "{0}mm",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} mm",
        },
      },
      "millisecond": Object {
        "long": Object {
          "other": "{0} ミリ秒",
        },
        "narrow": Object {
          "other": "{0}ms",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} ms",
        },
      },
      "minute": Object {
        "long": Object {
          "other": "{0} 分",
        },
        "narrow": Object {
          "other": "{0}m",
        },
        "perUnit": Object {
          "long": "{0}/分",
          "narrow": "{0}/分",
          "short": "{0}/分",
        },
        "short": Object {
          "other": "{0} 分",
        },
      },
      "month": Object {
        "long": Object {
          "other": "{0} か月",
        },
        "narrow": Object {
          "other": "{0}m",
        },
        "perUnit": Object {
          "long": "{0}/月",
          "narrow": "{0}/月",
          "short": "{0}/月",
        },
        "short": Object {
          "other": "{0} か月",
        },
      },
      "ounce": Object {
        "long": Object {
          "other": "{0} オンス",
        },
        "narrow": Object {
          "other": "{0}oz",
        },
        "perUnit": Object {
          "long": "{0}/オンス",
          "narrow": "{0}/oz",
          "short": "{0}/oz",
        },
        "short": Object {
          "other": "{0} oz",
        },
      },
      "percent": Object {
        "long": Object {
          "other": "{0} パーセント",
        },
        "narrow": Object {
          "other": "{0}%",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0}%",
        },
      },
      "petabyte": Object {
        "long": Object {
          "other": "{0} ペタバイト",
        },
        "narrow": Object {
          "other": "{0} PB",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} PB",
        },
      },
      "pound": Object {
        "long": Object {
          "other": "{0} ポンド",
        },
        "narrow": Object {
          "other": "{0}lb",
        },
        "perUnit": Object {
          "long": "{0}/ポンド",
          "narrow": "{0}/lb",
          "short": "{0}/lb",
        },
        "short": Object {
          "other": "{0} lb",
        },
      },
      "second": Object {
        "long": Object {
          "other": "{0} 秒",
        },
        "narrow": Object {
          "other": "{0}s",
        },
        "perUnit": Object {
          "long": "{0}/秒",
          "narrow": "{0}/秒",
          "short": "{0}/秒",
        },
        "short": Object {
          "other": "{0} 秒",
        },
      },
      "stone": Object {
        "long": Object {
          "other": "{0} ストーン",
        },
        "narrow": Object {
          "other": "{0}st",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} st",
        },
      },
      "terabit": Object {
        "long": Object {
          "other": "{0} テラビット",
        },
        "narrow": Object {
          "other": "{0}Tb",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} Tb",
        },
      },
      "terabyte": Object {
        "long": Object {
          "other": "{0} テラバイト",
        },
        "narrow": Object {
          "other": "{0}TB",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} TB",
        },
      },
      "week": Object {
        "long": Object {
          "other": "{0} 週間",
        },
        "narrow": Object {
          "other": "{0}w",
        },
        "perUnit": Object {
          "long": "{0}/週",
          "narrow": "{0}/週",
          "short": "{0}/週",
        },
        "short": Object {
          "other": "{0} 週間",
        },
      },
      "yard": Object {
        "long": Object {
          "other": "{0} ヤード",
        },
        "narrow": Object {
          "other": "{0}ヤード",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} yd",
        },
      },
      "year": Object {
        "long": Object {
          "other": "{0} 年",
        },
        "narrow": Object {
          "other": "{0}y",
        },
        "perUnit": Object {
          "long": "{0}/年",
          "narrow": "{0}/年",
          "short": "{0}/年",
        },
        "short": Object {
          "other": "{0} 年",
        },
      },
    },
  },
}
`;

exports[`extract-units should be able to extract vi 1`] = `
Object {
  "vi": Object {
    "compound": Object {
      "per": Object {
        "long": "{0}/{1}",
        "narrow": "{0}/{1}",
        "short": "{0}/{1}",
      },
    },
    "simple": Object {
      "acre": Object {
        "long": Object {
          "other": "{0} mẫu",
        },
        "narrow": Object {
          "other": "{0} mẫu",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} mẫu",
        },
      },
      "bit": Object {
        "long": Object {
          "other": "{0} bit",
        },
        "narrow": Object {
          "other": "{0} bit",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} bit",
        },
      },
      "byte": Object {
        "long": Object {
          "other": "{0} byte",
        },
        "narrow": Object {
          "other": "{0} byte",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} byte",
        },
      },
      "celsius": Object {
        "long": Object {
          "other": "{0} độ C",
        },
        "narrow": Object {
          "other": "{0}°C",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0}°C",
        },
      },
      "centimeter": Object {
        "long": Object {
          "other": "{0} xentimét",
        },
        "narrow": Object {
          "other": "{0}cm",
        },
        "perUnit": Object {
          "long": "{0}/cm",
          "narrow": "{0}/cm",
          "short": "{0}/cm",
        },
        "short": Object {
          "other": "{0} cm",
        },
      },
      "day": Object {
        "long": Object {
          "other": "{0} ngày",
        },
        "narrow": Object {
          "other": "{0} ngày",
        },
        "perUnit": Object {
          "long": "{0}/ngày",
          "narrow": "{0}/ngày",
          "short": "{0}/ngày",
        },
        "short": Object {
          "other": "{0} ngày",
        },
      },
      "degree": Object {
        "long": Object {
          "other": "{0} độ",
        },
        "narrow": Object {
          "other": "{0}°",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0}°",
        },
      },
      "fahrenheit": Object {
        "long": Object {
          "other": "{0} độ F",
        },
        "narrow": Object {
          "other": "{0}°F",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0}°F",
        },
      },
      "fluid-ounce": Object {
        "long": Object {
          "other": "{0} aoxơ chất lỏng",
        },
        "narrow": Object {
          "other": "{0} fl oz",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} fl oz",
        },
      },
      "foot": Object {
        "long": Object {
          "other": "{0} feet",
        },
        "narrow": Object {
          "other": "{0}'",
        },
        "perUnit": Object {
          "long": "{0}/ft",
          "narrow": "{0}/ft",
          "short": "{0}/ft",
        },
        "short": Object {
          "other": "{0} ft",
        },
      },
      "gallon": Object {
        "long": Object {
          "other": "{0} gallon",
        },
        "narrow": Object {
          "other": "{0} gal",
        },
        "perUnit": Object {
          "long": "{0}/gal",
          "narrow": "{0}/gal Mỹ",
          "short": "{0}/gal Mỹ",
        },
        "short": Object {
          "other": "{0} gal",
        },
      },
      "gigabit": Object {
        "long": Object {
          "other": "{0} gigabit",
        },
        "narrow": Object {
          "other": "{0} Gb",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} Gb",
        },
      },
      "gigabyte": Object {
        "long": Object {
          "other": "{0} gigabyte",
        },
        "narrow": Object {
          "other": "{0} GB",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} GB",
        },
      },
      "gram": Object {
        "long": Object {
          "other": "{0} gam",
        },
        "narrow": Object {
          "other": "{0}g",
        },
        "perUnit": Object {
          "long": "{0}/gam",
          "narrow": "{0}/g",
          "short": "{0}/g",
        },
        "short": Object {
          "other": "{0} g",
        },
      },
      "hectare": Object {
        "long": Object {
          "other": "{0} héc-ta",
        },
        "narrow": Object {
          "other": "{0}ha",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} ha",
        },
      },
      "hour": Object {
        "long": Object {
          "other": "{0} giờ",
        },
        "narrow": Object {
          "other": "{0} giờ",
        },
        "perUnit": Object {
          "long": "{0}/giờ",
          "narrow": "{0}/giờ",
          "short": "{0}/giờ",
        },
        "short": Object {
          "other": "{0} giờ",
        },
      },
      "inch": Object {
        "long": Object {
          "other": "{0} inch",
        },
        "narrow": Object {
          "other": "{0}\\\\\\"",
        },
        "perUnit": Object {
          "long": "{0}/inch",
          "narrow": "{0}/in",
          "short": "{0}/in",
        },
        "short": Object {
          "other": "{0} inch",
        },
      },
      "kilobit": Object {
        "long": Object {
          "other": "{0} kilobit",
        },
        "narrow": Object {
          "other": "{0} kb",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} kb",
        },
      },
      "kilobyte": Object {
        "long": Object {
          "other": "{0} kilobyte",
        },
        "narrow": Object {
          "other": "{0} kB",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} kB",
        },
      },
      "kilogram": Object {
        "long": Object {
          "other": "{0} kilôgam",
        },
        "narrow": Object {
          "other": "{0}kg",
        },
        "perUnit": Object {
          "long": "{0}/kg",
          "narrow": "{0}/kg",
          "short": "{0}/kg",
        },
        "short": Object {
          "other": "{0} kg",
        },
      },
      "kilometer": Object {
        "long": Object {
          "other": "{0} kilômét",
        },
        "narrow": Object {
          "other": "{0}km",
        },
        "perUnit": Object {
          "long": "{0}/km",
          "narrow": "{0}/km",
          "short": "{0}/km",
        },
        "short": Object {
          "other": "{0} km",
        },
      },
      "kilometer-per-hour": Object {
        "long": Object {
          "other": "{0} kilômét/giờ",
        },
        "narrow": Object {
          "other": "{0}km/h",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} km/h",
        },
      },
      "liter": Object {
        "long": Object {
          "other": "{0} lít",
        },
        "narrow": Object {
          "other": "{0}L",
        },
        "perUnit": Object {
          "long": "{0}/l",
          "narrow": "{0}/l",
          "short": "{0}/l",
        },
        "short": Object {
          "other": "{0} L",
        },
      },
      "liter-per-kilometer": Object {
        "long": Object {
          "other": "{0} lít/km",
        },
        "narrow": Object {
          "other": "{0} l/km",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} l/km",
        },
      },
      "megabit": Object {
        "long": Object {
          "other": "{0} megabit",
        },
        "narrow": Object {
          "other": "{0} Mb",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} Mb",
        },
      },
      "megabyte": Object {
        "long": Object {
          "other": "{0} megabyte",
        },
        "narrow": Object {
          "other": "{0} MB",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} MB",
        },
      },
      "meter": Object {
        "long": Object {
          "other": "{0} mét",
        },
        "narrow": Object {
          "other": "{0}m",
        },
        "perUnit": Object {
          "long": "{0}/m",
          "narrow": "{0}/m",
          "short": "{0}/m",
        },
        "short": Object {
          "other": "{0} m",
        },
      },
      "meter-per-second": Object {
        "long": Object {
          "other": "{0} mét/giây",
        },
        "narrow": Object {
          "other": "{0}m/s",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} m/s",
        },
      },
      "mile": Object {
        "long": Object {
          "other": "{0} dặm",
        },
        "narrow": Object {
          "other": "{0}mi",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} dặm",
        },
      },
      "mile-per-gallon": Object {
        "long": Object {
          "other": "{0} dặm/gallon",
        },
        "narrow": Object {
          "other": "{0} mpg",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} mpg",
        },
      },
      "mile-per-hour": Object {
        "long": Object {
          "other": "{0} dặm/giờ",
        },
        "narrow": Object {
          "other": "{0}mph",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} mi/h",
        },
      },
      "mile-scandinavian": Object {
        "long": Object {
          "other": "{0} dặm scandinavia",
        },
        "narrow": Object {
          "other": "{0} smi",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} smi",
        },
      },
      "milliliter": Object {
        "long": Object {
          "other": "{0} mililít",
        },
        "narrow": Object {
          "other": "{0} mL",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} mL",
        },
      },
      "millimeter": Object {
        "long": Object {
          "other": "{0} milimét",
        },
        "narrow": Object {
          "other": "{0}mm",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} mm",
        },
      },
      "millisecond": Object {
        "long": Object {
          "other": "{0} mili giây",
        },
        "narrow": Object {
          "other": "{0}miligiây",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} mili giây",
        },
      },
      "minute": Object {
        "long": Object {
          "other": "{0} phút",
        },
        "narrow": Object {
          "other": "{0} phút",
        },
        "perUnit": Object {
          "long": "{0}/phút",
          "narrow": "{0}/phút",
          "short": "{0}/phút",
        },
        "short": Object {
          "other": "{0} phút",
        },
      },
      "month": Object {
        "long": Object {
          "other": "{0} tháng",
        },
        "narrow": Object {
          "other": "{0} tháng",
        },
        "perUnit": Object {
          "long": "{0}/tháng",
          "narrow": "{0}/tháng",
          "short": "{0}/tháng",
        },
        "short": Object {
          "other": "{0} tháng",
        },
      },
      "ounce": Object {
        "long": Object {
          "other": "{0} aoxơ",
        },
        "narrow": Object {
          "other": "{0}oz",
        },
        "perUnit": Object {
          "long": "{0}/aoxơ",
          "narrow": "{0}/oz",
          "short": "{0}/oz",
        },
        "short": Object {
          "other": "{0} oz",
        },
      },
      "percent": Object {
        "long": Object {
          "other": "{0}%",
        },
        "narrow": Object {
          "other": "{0}%",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0}%",
        },
      },
      "petabyte": Object {
        "long": Object {
          "other": "{0} PB",
        },
        "narrow": Object {
          "other": "{0} PB",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} PB",
        },
      },
      "pound": Object {
        "long": Object {
          "other": "{0} pao",
        },
        "narrow": Object {
          "other": "{0}lb",
        },
        "perUnit": Object {
          "long": "{0}/lb",
          "narrow": "{0}/lb",
          "short": "{0}/lb",
        },
        "short": Object {
          "other": "{0} lb",
        },
      },
      "second": Object {
        "long": Object {
          "other": "{0} giây",
        },
        "narrow": Object {
          "other": "{0} giây",
        },
        "perUnit": Object {
          "long": "{0}/giây",
          "narrow": "{0}/giây",
          "short": "{0}/giây",
        },
        "short": Object {
          "other": "{0} giây",
        },
      },
      "stone": Object {
        "long": Object {
          "other": "{0} st",
        },
        "narrow": Object {
          "other": "{0} st",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} st",
        },
      },
      "terabit": Object {
        "long": Object {
          "other": "{0} terabit",
        },
        "narrow": Object {
          "other": "{0} Tb",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} Tb",
        },
      },
      "terabyte": Object {
        "long": Object {
          "other": "{0} terabyte",
        },
        "narrow": Object {
          "other": "{0} TB",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} TB",
        },
      },
      "week": Object {
        "long": Object {
          "other": "{0} tuần",
        },
        "narrow": Object {
          "other": "{0} tuần",
        },
        "perUnit": Object {
          "long": "{0}/tuần",
          "narrow": "{0}/tuần",
          "short": "{0}/tuần",
        },
        "short": Object {
          "other": "{0} tuần",
        },
      },
      "yard": Object {
        "long": Object {
          "other": "{0} yard",
        },
        "narrow": Object {
          "other": "{0}yd",
        },
        "perUnit": Object {
          "long": undefined,
          "narrow": undefined,
          "short": undefined,
        },
        "short": Object {
          "other": "{0} yd",
        },
      },
      "year": Object {
        "long": Object {
          "other": "{0} năm",
        },
        "narrow": Object {
          "other": "{0} năm",
        },
        "perUnit": Object {
          "long": "{0}/năm",
          "narrow": "{0}/năm",
          "short": "{0}/năm",
        },
        "short": Object {
          "other": "{0} năm",
        },
      },
    },
  },
}
`;
